change app path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Enable actuator endpoints:
 #  - health: used by LivenessProbe and ReadinessProbe to mark this app as running
 #  - prometheus: used by Prometheus to scrape app metrics
+server.servlet.context-path=/app
 management.endpoints.web.exposure.include=health, prometheus
